--- a/About.html
+++ b/About.html
@@ -142,7 +142,7 @@ Our mission is to make travel accessible and enjoyable for everyone. We aim to i
               <P><h2>Join Us on Your Next Adventure!</h2>
                 Are you ready to explore the world? Let us help you create memories that will last a lifetime! Contact us today to start planning your dream getaway, and follow us on [social media links] for travel tips and inspiration.
                 
-                Thank You for Choosing [Your Travel Agency Name]!
+                Thank You for Choosing [Travel X]!
                 We look forward to being a part of your travel journey!</P>
         </div>
     </div>    
